[package]
name = "mcmu_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1"
bincode="1"
mcmu_basic={path="../mcmu_basic"}
chrono={version="0",features=["serde"]}
rocksdb="0"
regex="1"
thiserror="1"
rand="0"
blake3="1"
anyhow="1"
tokio = {version = "1", features = ["net", "rt-multi-thread", "macros", "time", "sync", "io-util"]}
serde = {version="1",features=["derive"]}